version/0.31/_sources/api/solver/_autosummary/settings/multiphase_5.rst.txt
:orphan:

.. _multiphase_5:

multiphase
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.multiphase_5
    :show-inheritance:

.. rubric:: Attributes

======================================================================   =======================================

Attribute                                                                                                Summary

======================================================================   =======================================
:ref:`slip_velocity_specification <slip_velocity_specification>`             Slip Velocity Specification Method.

:ref:`phase_velocity_ratio <phase_velocity_ratio>`                                        Phase Velocity Ratio .

:ref:`volume_fraction <volume_fraction>`                                                        Volume Fraction.

:ref:`granular_temperature <granular_temperature>`                                         Granular temperature.

:ref:`interfacial_area_concentration <interfacial_area_concentration>`           Interfacial area concentration.

======================================================================   =======================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`mass_flow_outlet_child <mass_flow_outlet_child>`       'child_object_type' of mass_flow_outlet.

:ref:`phase_10_child <phase_10_child>`                                  'child_object_type' of phase.

:ref:`settings_13 <settings_13>`                                   Domain name to define settings on.

:ref:`phase_36_child <phase_36_child>`                                  'child_object_type' of phase.

======================================================   ============================================

