version/0.40/_sources/api/solver/_autosummary/settings/multiphase_5.rst.txt
:orphan:

.. _multiphase_5:

multiphase
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.multiphase_5
    :show-inheritance:

.. rubric:: Attributes

======================================================================   =======================================

Attribute                                                                                                Summary

======================================================================   =======================================
:ref:`open_channel <open_channel_2>`                                                               Open Channel.

:ref:`inlet_number <inlet_number>`                                                               Inlet Group ID.

:ref:`secondary_phase_for_inlet <secondary_phase_for_inlet>`                          Secondary Phase for Inlet.

:ref:`free_surface_level <free_surface_level>`                                               Free Surface Level.

:ref:`bottom_level <bottom_level>`                                                                 Bottom Level.

:ref:`density_interpolation_method <density_interpolation_method_1>`               Density Interpolation Method.

:ref:`population_balance <population_balance>`                                      Population balance settings.

:ref:`slip_velocity_specification <slip_velocity_specification>`             Slip Velocity Specification Method.

:ref:`phase_velocity_ratio <phase_velocity_ratio>`                                        Phase Velocity Ratio .

:ref:`volume_fraction <volume_fraction>`                                                        Volume Fraction.

:ref:`granular_temperature <granular_temperature>`                                         Granular temperature.

:ref:`interfacial_area_concentration <interfacial_area_concentration>`           Interfacial area concentration.

:ref:`relative_humidity <relative_humidity>`                                                  Relative humidity.

:ref:`liquid_mass_fraction <liquid_mass_fraction>`                                         Liquid Mass Fraction.

:ref:`log10_droplets_per_unit_volume <log10_droplets_per_unit_volume>`          Log10(Droplets Per Unit Volume).

======================================================================   =======================================

.. rubric:: Included in:

========================================================   ===========================================

Parent                                                                                         Summary

========================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`           'child_object_type' of mass_flow_inlet.

:ref:`phase_11_child <phase_11_child>`                                   'child_object_type' of phase.

:ref:`mass_flow_inlet_1_child <mass_flow_inlet_1_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_35_child <phase_35_child>`                                   'child_object_type' of phase.

========================================================   ===========================================

